Replaced <div> tags wtih <p> and <h1-h6> tags

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
      <header class="header">
          <div class="container">
              <div class="header_inner">
-                 <div class="header_logo">Site name</div>
+                 <a class="header_logo">Site name</a>
                  <nav class="nav">
                      <a href="#" class="nav_link">Home</a>
                      <a href="#" class="nav_link">About</a>
@@ -35,72 +35,72 @@
      <div class="intro">
          <div class="container">
              <div class="intro_inner">
-                 <div class="intro_title">cras ornare trist lorem ipsum</div>
-                 <div class="intro_subtitle">cusce pellentesque susc</div>
+                 <h1 class="intro_title">cras ornare trist lorem ipsum</h1>
+                 <h2 class="intro_subtitle">cusce pellentesque susc</h2>
                  <div class="intro_button">Read more</div>
              </div>
          </div>
      </div>
      <div class="table">
          <div class="container">
-             <div class="table_inner">
-                 <div class="table_box" id="box_red">
+             <ul class="table_inner">
+                 <li class="table_box" id="box_red">
                      <div class="box_circle"><i class="fas fa-comment-dots"></i></div>
-                     <div class="box_title">
+                     <h3 class="box_title">
                          Vestibulum auctor
-                     </div>
-                     <div class="box_subtitle">
+                     </h3>
+                     <p class="box_subtitle">
                          Praesent dapibus, neque id cursus faucibus,
                          tortor neque esgetas augue, eu vulputate magna eros eu erat
                          Aliquam erat volutpat
-                     </div>
-                 </div>
-                 <div class="table_box" id="box_yellow">
+                     </p>
+                 </li>
+                 <li class="table_box" id="box_yellow">
                      <div class="box_circle"><i class="fas fa-pencil-alt"></i></div>
-                     <div class="box_title">
+                     <h3 class="box_title">
                          Integer vitae lib
-                     </div>
-                     <div class="box_subtitle">
+                     </h3>
+                     <p class="box_subtitle">
                          Jiraesent dapibus, neque id cursus faucibus,
                          tortor neque esgetas augue, eu vulputate magna eros eu erat
                          Aliquam erat volutpat
-                     </div>
-                 </div>
-                 <div class="table_box" id="box_green">
+                     </p>
+                 </li>
+                 <li class="table_box" id="box_green">
                      <div class="box_circle"><i class="fas fa-crown"></i></div>
-                     <div class="box_title">
+                     <h3 class="box_title">
                          tempor interdum
-                     </div>
-                     <div class="box_subtitle">
+                     </h3>
+                     <p class="box_subtitle">
                          Sed adipicing ornare risus. Morbi est, b
                          landint sit amet, sagittis vel, euismod vel, velit,
                          Pellentesque egestas sem. Suspendisse commodo ullamcorper
-                     </div>
-                 </div>
-                 <div class="table_box" id="box_purple">
+                     </p>
+                 </li>
+                 <li class="table_box" id="box_purple">
                      <div class="box_circle"><i class="fas fa-user-tie"></i></div>
-                     <div class="box_title">
+                     <h3 class="box_title">
                          fellis quis tortor
-                     </div>
-                     <div class="box_subtitle">
+                     </h3>
+                     <p class="box_subtitle">
                          Lorem dapibus, neque id cursus faucibus,
                          tortor neque esgetas augue, eu vulputate magna eros eu erat
                          Aliquam erat volutpat
-                     </div>
-                 </div>
-             </div>
+                     </p>
+                 </li>
+             </ul>
          </div>
      </div>
      <div class="info">
          <div class="container">
              <div class="info_inner">
                  <div class="info_text">
-                     <div class="info_text_title">
+                     <h3 class="info_text_title">
                          Tempor interdum
-                     </div>
-                     <div class="info_text_subtitle">
+                     </h3>
+                     <h4 class="info_text_subtitle">
                          integer vitae libero ac risus egestas placerat
-                     </div>
+                     </h4>
                      <div class="info_text_line"></div>
                  </div>
              </div>
@@ -113,12 +113,12 @@
                      <div class="column_header column_red"></div>
                      <div class="column_content">
                          <div class="column_photo column_photo_red"></div>
-                         <div class="column_text">
+                         <p class="column_text">
                              Cing ornare risus. Morbi est est, binto sin
                              landit sit amet, sagittis vel, euismod vel, velit.
                              Pellentesque egestas sem. Suspendisse com- <br>
                              modo ullamcorper
-                         </div>
+                         </p>
                          <div class="column_button column_red">read more</div>
                      </div>
                  </div>
@@ -126,12 +126,12 @@
                      <div class="column_header column_yellow"></div>
                      <div class="column_content">
                          <div class="column_photo column_photo_yellow"></div>
-                         <div class="column_text">
+                         <p class="column_text">
                              Joren ornare risus. Morbi est est, binto sin
                              landit sit amet, sagittis vel, euismod vel, velit.
                              Pellentesque egestas sem. Suspendisse com- <br>
                              modo ullamcorper
-                         </div>
+                         </p>
                          <div class="column_button column_yellow">read more</div>
                      </div>
                  </div>
@@ -139,12 +139,12 @@
                      <div class="column_header column_green"></div>
                      <div class="column_content">
                          <div class="column_photo column_photo_green"></div>
-                         <div class="column_text">
+                         <p class="column_text">
                              Lorem ornare risus. Morbi est est, binto sin
                              landit sit amet, sagittis vel, euismod vel, velit.
                              Pellentesque egestas sem. Suspendisse com- <br>
                              modo ullamcorper
-                         </div>
+                         </p>
                          <div class="column_button column_green">read more</div>
                      </div>
                  </div>
@@ -155,8 +155,8 @@
          <div class="container">
              <div class="post_inner">
                  <div class="post_icon"><i class="fas fa-envelope-open-text"></i></div>
-                 <div class="post_title">Connect with us</div>
-                 <div class="post_subtitle">vivsmus vestibulum nulla nec ante</div>
+                 <h3 class="post_title">Connect with us</h3>
+                 <h4 class="post_subtitle">vivsmus vestibulum nulla nec ante</h4>
                  <div class="post_line"></div>
                  <form action="#" class="post_form">
                      <div class="post_form_1line">
