--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=Source+Sans+Pro&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="src/styles/style.css">
     <title>P1</title>
 </head>
 <body>
@@ -27,7 +28,7 @@
      <div class="banner">
          <div class="container_wide">
              <div class="banner_inner">
-                 <img src="" alt="banner" id="banner">
+                 <img src="src/img/banner.png" alt="banner">
              </div>
          </div>
      </div>
@@ -43,7 +44,7 @@
      <div class="table">
          <div class="container">
              <ul class="table_inner">
-                 <li class="table_box" id="box_red">
+                 <li class="table_box table_box--red">
                      <div class="box_circle"><i class="fas fa-comment-dots"></i></div>
                      <h3 class="box_title">
                          Vestibulum auctor
@@ -54,7 +55,7 @@
                          Aliquam erat volutpat
                      </p>
                  </li>
-                 <li class="table_box" id="box_yellow">
+                 <li class="table_box table_box--yellow">
                      <div class="box_circle"><i class="fas fa-pencil-alt"></i></div>
                      <h3 class="box_title">
                          Integer vitae lib
@@ -65,7 +66,7 @@
                          Aliquam erat volutpat
                      </p>
                  </li>
-                 <li class="table_box" id="box_green">
+                 <li class="table_box table_box--green">
                      <div class="box_circle"><i class="fas fa-crown"></i></div>
                      <h3 class="box_title">
                          tempor interdum
@@ -76,7 +77,7 @@
                          Pellentesque egestas sem. Suspendisse commodo ullamcorper
                      </p>
                  </li>
-                 <li class="table_box" id="box_purple">
+                 <li class="table_box table_box--purple">
                      <div class="box_circle"><i class="fas fa-user-tie"></i></div>
                      <h3 class="box_title">
                          fellis quis tortor
@@ -109,42 +110,42 @@
          <div class="container">
              <div class="blog_inner">
                  <div class="blog_column">
-                     <div class="column_header column_red"></div>
+                     <div class="column_header column--red"></div>
                      <div class="column_content">
-                         <div class="column_photo column_photo_red"></div>
+                         <div class="column_photo column_photo--red"></div>
                          <p class="column_text">
                              Cing ornare risus. Morbi est est, binto sin
                              landit sit amet, sagittis vel, euismod vel, velit.
                              Pellentesque egestas sem. Suspendisse com- <br>
                              modo ullamcorper
                          </p>
-                         <div class="column_button column_red">read more</div>
+                         <div class="column_button column--red">read more</div>
                      </div>
                  </div>
                  <div class="blog_column">
-                     <div class="column_header column_yellow"></div>
+                     <div class="column_header column--yellow"></div>
                      <div class="column_content">
-                         <div class="column_photo column_photo_yellow"></div>
+                         <div class="column_photo column_photo--yellow"></div>
                          <p class="column_text">
                              Joren ornare risus. Morbi est est, binto sin
                              landit sit amet, sagittis vel, euismod vel, velit.
                              Pellentesque egestas sem. Suspendisse com- <br>
                              modo ullamcorper
                          </p>
-                         <div class="column_button column_yellow">read more</div>
+                         <div class="column_button column--yellow">read more</div>
                      </div>
                  </div>
                  <div class="blog_column">
-                     <div class="column_header column_green"></div>
+                     <div class="column_header column--green"></div>
                      <div class="column_content">
-                         <div class="column_photo column_photo_green"></div>
+                         <div class="column_photo column_photo--green"></div>
                          <p class="column_text">
                              Lorem ornare risus. Morbi est est, binto sin
                              landit sit amet, sagittis vel, euismod vel, velit.
                              Pellentesque egestas sem. Suspendisse com- <br>
                              modo ullamcorper
                          </p>
-                         <div class="column_button column_green">read more</div>
+                         <div class="column_button column--green">read more</div>
                      </div>
                  </div>
              </div>
@@ -158,11 +159,11 @@
                  <h4 class="post_subtitle">vivsmus vestibulum nulla nec ante</h4>
                  <div class="post_line"></div>
                  <form action="#" class="post_form">
-                     <div class="post_form_1line">
+                     <div class="post_form--small">
                          <input type="text" class="post_form_first">
                          <input type="text" class="post_form_first">
                      </div>
-                     <input type="text" class="post_form_second">
+                     <input type="text" class="post_form--big">
                  </form>
                  <div class="post_button">Submit</div>
              </div>
